# ChangeLog for net-ftp/atftp
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-ftp/atftp/ChangeLog,v 1.31 2013/12/01 22:10:08 pacho Exp $

*atftp-0.7-r3 (01 Dec 2013)

  01 Dec 2013; Pacho Ramos <pacho@gentoo.org> +atftp-0.7-r3.ebuild,
  +files/atftp.service, +files/atftp.service.conf:
  Add unit file, bug #492698 by Christian Strahl

  13 May 2012; <swift@gentoo.org> atftp-0.7-r1.ebuild, atftp-0.7-r2.ebuild:
  SELinux policy module for TFTP is provided by selinux-tftp

  21 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> atftp-0.7-r2.ebuild:
  x86 stable wrt bug #393883

  16 Dec 2011; Agostino Sarubbo <ago@gentoo.org> atftp-0.7-r2.ebuild:
  Stable for AMD64, wrt bug #393883

  09 Apr 2011; Tobias Klausmann <klausman@gentoo.org> atftp-0.7-r2.ebuild:
  Revert stupid revert of old-style virtual (cf. bug 323883)

  03 Apr 2011; Tobias Klausmann <klausman@gentoo.org> atftp-0.7-r2.ebuild,
  metadata.xml:
  Make myself maintainer, re-add virtual

*atftp-0.7-r2 (26 Mar 2011)

  26 Mar 2011; Tobias Klausmann <klausman@gentoo.org> +atftp-0.7-r2.ebuild,
  +files/atftp-0.7-blockno.patch, +files/atftp-0.7-illreply.patch,
  +files/atftp-0.7-spaced_filename.patch:
  Integrate patches from bugs 321705, 322601 and 323883

  22 Mar 2011; Ulrich Mueller <ulm@gentoo.org> atftp-0.7-r1.ebuild:
  Drop PROVIDE=virtual/tftp and update blocker, bug 359125.

  26 Aug 2009; Víctor Ostorga <vostorga@gentoo.org>
  -files/atftp-0.6-security.patch, -files/atftp-0.7-gcc.patch:
  Cleaning out unused patches

  26 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org> atftp-0.7-r1.ebuild:
  Use mirror://debian/.

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  08 Apr 2007; <solar@gentoo.org> atftp-0.7-r1.ebuild:
  - added ~s390

  08 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -atftp-0.6.2.ebuild,
  -atftp-0.7.ebuild:
  QA: Removed unused versions.
