@@ -16,13 +16,13 @@ DIST atftp-0.7.tar.gz 202234 SHA256 9c548c44d3cfdf259118d9fd4e468e1fe4567456dbff
 DIST atftp_0.7-11.diff.gz 26055 SHA256 77accd1f5b5d4759fe9572f7a917c629e35692e484ac4dc6fd4415fe745036ff SHA512 28747f8f3ef2fc3b122361f682fe26ba93acf09b190f61efb3cfcbb6bdeef78cfe1348aeaf1699003a7e02586579be670d85b65baad1b1165a4bec9a9279adb5 WHIRLPOOL 9dc3678862d994810bdbfae2189c074345fa895dd8d2612dea155774abb804a3d7dee1465e4b0a2beec7a429440d0d971a3d67db57d43341b87f3533b72bea8a
 EBUILD atftp-0.7-r1.ebuild 1767 SHA256 82d4559c4c907505c47a3c40cf0ac96855ba44cb24fffadf4f7e5651a81c9efd SHA512 d50ab69a49148a2575191a745f77f92de8dc995db0cacf12a4338e9940721535f5bfd3abc646b64e69924b7d606c6ccbe3488347ac17435aed080ef620590832 WHIRLPOOL 06625940cb10d9168e3ccaf5cb43b1391bef75f3b6f519cf0acdac90e7e7d8ac77a77db44b065db6812943af243f3be54bf7d60d55301419f30513d3bed1227a
 EBUILD atftp-0.7-r2.ebuild 1902 SHA256 d14a1b7ed13cc1f5d9530b756c981b311f826d159924e785c4b01813cbe095ba SHA512 eb44f3d6bd9c9d7cfa3ac29a902ba3d55c75acbf92e296fef5c95e90dd629545ea7f3bccf712c81b174c7a925c97a224a6a5fdd675415376c38820da3964747e WHIRLPOOL 5de492613bd2ac22e4c3eb509efe1a3ad99feacd78b8520125b1725b97cbd0cab5c4d664973d78eb346f1b641dfc74bc64a0c10f56b0e125a76edadcc7866029
-EBUILD atftp-0.7-r3.ebuild 1947 SHA256 79d1038e072b19073ad3a5e1d5bb1b540571eec1aeb128bea6f2619dd1086710 SHA512 83a41756a2e3da7204ec9e19f6d76e1006e6fda82bff750aff3058c5917e7e58eca30d4b235087b089ea347b8ad690db445f06c328cd4ced0d05282be2993053 WHIRLPOOL 526e3a934a6c983538034251cdfffa21435043d39b4004fecdccf55fe960a5e805a60c3e2cebb26cdeb558e487a019d30d519eb18d3579af11463e855fb38944
-MISC ChangeLog 5440 SHA256 4d8f8d24b7c2a5301d8ffd70389fd6074abd6165527bb9d9f51f419081e1c102 SHA512 7086fee91b6071fa82f382cc73003671cf177f0b0abfe5ffdd904ae9930dec769cd3cbc8403fb8b5b851f4e9d38056933b0f6069d659c9a33695a848d7c837f3 WHIRLPOOL 5cbeef3ef4ae20988c47b6f2b082df6f3abedda87f2234e7a905f6f047e160d60eb48c82a716cff960a1c72f4dd2efe8456dc355786a62a2dc9ea8d59080883a
+EBUILD atftp-0.7-r3.ebuild 1945 SHA256 5b225d07f4270096e37e5b38f99c5e8d3e38c4aa09b4b0e4277d878fdf699fcd SHA512 27263535a85f3d9d8abe45567d39fab828251ec22d76b04a1adcffec974ba0f5aaf8541166d3f3f9ae0f31d064e1be58b9c4a69f4642b6a515dbf3cbd484bf49 WHIRLPOOL 061462f93a380c11e46147620d2a8489c95ca4e664716273067a91006959150f52902070c25d0cdbc1fdfa1c26528222e0466f3eab4bdd05fdcc6ed7513598f4
+MISC ChangeLog 5540 SHA256 82e259537614d405d89fcea700364b5a9d62a749fe93bbc4cb63928c8424abcc SHA512 c749dbd460b1f6c33f12e4ff8d8273426a0bf3e27a5ec6a7f73e77a623e8ff22bbfe85ad47dbfc6d7816c7b01d2bd7c4b7a8cf3aca6cc737a1ae8a937884cbe9 WHIRLPOOL 9c1f064ef89b0d149a15731bb16a0a294af0f32d1a9c9ed6bb7f58e6c587c182aeba9b60ca9dcb509c8632360201db62a13315330c9e69c266c9467452451ff8
 MISC metadata.xml 201 SHA256 8f40014a5a33302eb2f72fa5e8a7493829fedfc9801fb6366b13066d9b4e51b6 SHA512 b17338d3905aed8473593db886d7f6eaa9b1a4447268ae003980aa54586d5507befe01db504140e760ba3b36fb0fc3ebd246b234f3e33dd964bdf121aa525d2d WHIRLPOOL 5d2ea7d5b0350de6243f6039cc5036580f25b98f27967f11337c9d3c6506c0e23e1aea4dae82bbdb5b5c2bc32b240b2836f49f2fea8aef0b900b6c30ba183e15
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKbs8EACgkQCaWpQKGI+9SyMACeK+jVtYEJobWO3KP0XnRpisfY
-YoYAn36J6tItgutKNbHqM5Y04dP9BECc
-=CUYZ
+iEYEAREIAAYFAlLQYkoACgkQCaWpQKGI+9R2BACeLpx04eRYv/VZZ3JRnjZnAPkU
+6oIAnA64ufU0E6X/YN8uuKIks/cW3Opd
+=ItY1
 -----END PGP SIGNATURE-----
