@@ -1,6 +1,9 @@
 # ChangeLog for net-ftp/atftp
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/atftp/ChangeLog,v 1.31 2013/12/01 22:10:08 pacho Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/atftp/ChangeLog,v 1.32 2014/01/10 21:12:41 pacho Exp $
+
+  10 Jan 2014; Pacho Ramos <pacho@gentoo.org> atftp-0.7-r3.ebuild:
+  amd64/x86 stable, bug #496272
 
 *atftp-0.7-r3 (01 Dec 2013)
 
